--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,22 @@
 {
+    "env": {
+        "browser": true,
+        "node": true
+    },
+    "extends": ["eslint:recommended", "plugin:react/recommended"],
     "parser": "babel-eslint",
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        }
+    },
+    "plugins": [
+        "react"
+    ],
     "rules": {
-        "no-console": 1,
         "strict": 0
+    },
+    "globals": {
+        "document": false
     }
 }
