--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $travis_deploy
-  local_dir: dist
+  local_dir: src
   on:
     branch: dev
 notifications:
